upload/target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<>'", "'='", "'<'", "'>'", 
                     "'<='", "'>='", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'('", "')'", "';'", "'..'", "' .. '", "','", "':'", 
                     "':='" ]

    symbolicNames = [ "<INVALID>", "COMMENT_1", "COMMENT_2", "COMENT_3", 
                      "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", "DO", 
                      "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "ARRAY", "ANDTHEN", 
                      "ORELSE", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "WITH", "ADD", "SUB", "MULTIPLICATION", "DIVISION", 
                      "NOT", "AND", "OR", "NOT_EQUAL", "EQUAL", "LESS_THAN", 
                      "GREATER_THAN", "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", 
                      "DIV", "MOD", "LSB", "RSB", "LB", "RB", "SEMI", "DD", 
                      "DD2", "COMMA", "COLON", "ASSIGN", "INTLIT", "FLOATLIT", 
                      "BOOL_LIT", "TRUE", "FALSE", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "STRING_LIT", "ID", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_dec = 2
    RULE_varlist_dec = 3
    RULE_one_var_dec = 4
    RULE_idlist = 5
    RULE_fun_dec = 6
    RULE_procedure_dec = 7
    RULE_paralist = 8
    RULE_para_dec = 9
    RULE_types = 10
    RULE_literals = 11
    RULE_primitive_types = 12
    RULE_compound_type = 13
    RULE_array_dec = 14
    RULE_operand = 15
    RULE_expression = 16
    RULE_expression1 = 17
    RULE_expression2 = 18
    RULE_expression3 = 19
    RULE_expression4 = 20
    RULE_expression5 = 21
    RULE_expression6 = 22
    RULE_arrayelement = 23
    RULE_funcall = 24
    RULE_listexp = 25
    RULE_compoundStatement = 26
    RULE_statements = 27
    RULE_assignstatement = 28
    RULE_variable = 29
    RULE_ifstatement = 30
    RULE_whilestatement = 31
    RULE_forstatement = 32
    RULE_initialExp = 33
    RULE_finalExp = 34
    RULE_breakstatement = 35
    RULE_continuestatement = 36
    RULE_returnstatement = 37
    RULE_lis_statements = 38
    RULE_withstatements = 39
    RULE_callstatements = 40

    ruleNames =  [ "program", "decl", "var_dec", "varlist_dec", "one_var_dec", 
                   "idlist", "fun_dec", "procedure_dec", "paralist", "para_dec", 
                   "types", "literals", "primitive_types", "compound_type", 
                   "array_dec", "operand", "expression", "expression1", 
                   "expression2", "expression3", "expression4", "expression5", 
                   "expression6", "arrayelement", "funcall", "listexp", 
                   "compoundStatement", "statements", "assignstatement", 
                   "variable", "ifstatement", "whilestatement", "forstatement", 
                   "initialExp", "finalExp", "breakstatement", "continuestatement", 
                   "returnstatement", "lis_statements", "withstatements", 
                   "callstatements" ]

    EOF = Token.EOF
    COMMENT_1=1
    COMMENT_2=2
    COMENT_3=3
    BREAK=4
    CONTINUE=5
    FOR=6
    TO=7
    DOWNTO=8
    DO=9
    IF=10
    THEN=11
    ELSE=12
    RETURN=13
    WHILE=14
    BEGIN=15
    END=16
    FUNCTION=17
    PROCEDURE=18
    VAR=19
    ARRAY=20
    ANDTHEN=21
    ORELSE=22
    OF=23
    REAL=24
    BOOLEAN=25
    INTEGER=26
    STRING=27
    WITH=28
    ADD=29
    SUB=30
    MULTIPLICATION=31
    DIVISION=32
    NOT=33
    AND=34
    OR=35
    NOT_EQUAL=36
    EQUAL=37
    LESS_THAN=38
    GREATER_THAN=39
    LESS_THAN_EQUAL=40
    GREATER_THAN_EQUAL=41
    DIV=42
    MOD=43
    LSB=44
    RSB=45
    LB=46
    RB=47
    SEMI=48
    DD=49
    DD2=50
    COMMA=51
    COLON=52
    ASSIGN=53
    INTLIT=54
    FLOATLIT=55
    BOOL_LIT=56
    TRUE=57
    FALSE=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    STRING_LIT=61
    ID=62
    WS=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.decl()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 87
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def fun_dec(self):
            return self.getTypedRuleContext(MPParser.Fun_decContext,0)


        def procedure_dec(self):
            return self.getTypedRuleContext(MPParser.Procedure_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MPParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.var_dec()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.fun_dec()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.procedure_dec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def varlist_dec(self):
            return self.getTypedRuleContext(MPParser.Varlist_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_dec" ):
                return visitor.visitVar_dec(self)
            else:
                return visitor.visitChildren(self)




    def var_dec(self):

        localctx = MPParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(MPParser.VAR)
            self.state = 95
            self.varlist_dec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Varlist_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def one_var_dec(self):
            return self.getTypedRuleContext(MPParser.One_var_decContext,0)


        def varlist_dec(self):
            return self.getTypedRuleContext(MPParser.Varlist_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_varlist_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist_dec" ):
                return visitor.visitVarlist_dec(self)
            else:
                return visitor.visitChildren(self)




    def varlist_dec(self):

        localctx = MPParser.Varlist_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist_dec)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.one_var_dec()
                self.state = 98
                self.varlist_dec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.one_var_dec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class One_var_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def getRuleIndex(self):
            return MPParser.RULE_one_var_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOne_var_dec" ):
                return visitor.visitOne_var_dec(self)
            else:
                return visitor.visitChildren(self)




    def one_var_dec(self):

        localctx = MPParser.One_var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_one_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.idlist()
            self.state = 104
            self.match(MPParser.COLON)
            self.state = 105
            self.types()
            self.state = 106
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def COMMA(self):
            return self.getToken(MPParser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MPParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(MPParser.ID)
                self.state = 109
                self.match(MPParser.COMMA)
                self.state = 110
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(MPParser.CompoundStatementContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_fun_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_dec" ):
                return visitor.visitFun_dec(self)
            else:
                return visitor.visitChildren(self)




    def fun_dec(self):

        localctx = MPParser.Fun_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fun_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MPParser.FUNCTION)
            self.state = 115
            self.match(MPParser.ID)
            self.state = 116
            self.match(MPParser.LB)
            self.state = 117
            self.paralist()
            self.state = 118
            self.match(MPParser.RB)
            self.state = 119
            self.match(MPParser.COLON)
            self.state = 120
            self.types()
            self.state = 121
            self.match(MPParser.SEMI)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 122
                self.var_dec()


            self.state = 125
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Procedure_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundStatement(self):
            return self.getTypedRuleContext(MPParser.CompoundStatementContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(MPParser.Var_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_procedure_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure_dec" ):
                return visitor.visitProcedure_dec(self)
            else:
                return visitor.visitChildren(self)




    def procedure_dec(self):

        localctx = MPParser.Procedure_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procedure_dec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MPParser.PROCEDURE)
            self.state = 128
            self.match(MPParser.ID)
            self.state = 129
            self.match(MPParser.LB)
            self.state = 130
            self.paralist()
            self.state = 131
            self.match(MPParser.RB)
            self.state = 132
            self.match(MPParser.SEMI)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 133
                self.var_dec()


            self.state = 136
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParalistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para_dec(self):
            return self.getTypedRuleContext(MPParser.Para_decContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def paralist(self):
            return self.getTypedRuleContext(MPParser.ParalistContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = MPParser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paralist)
        self._la = 0 # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.para_dec()
                self.state = 139
                self.match(MPParser.SEMI)
                self.state = 140
                self.paralist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MPParser.ID:
                    self.state = 142
                    self.para_dec()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Para_decContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MPParser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_para_dec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara_dec" ):
                return visitor.visitPara_dec(self)
            else:
                return visitor.visitChildren(self)




    def para_dec(self):

        localctx = MPParser.Para_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_para_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.idlist()
            self.state = 148
            self.match(MPParser.COLON)
            self.state = 149
            self.types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_types(self):
            return self.getTypedRuleContext(MPParser.Primitive_typesContext,0)


        def compound_type(self):
            return self.getTypedRuleContext(MPParser.Compound_typeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MPParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_types)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.primitive_types()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.compound_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MPParser.FLOATLIT, 0)

        def BOOL_LIT(self):
            return self.getToken(MPParser.BOOL_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(MPParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_literals

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiterals" ):
                return visitor.visitLiterals(self)
            else:
                return visitor.visitChildren(self)




    def literals(self):

        localctx = MPParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_literals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTLIT) | (1 << MPParser.FLOATLIT) | (1 << MPParser.BOOL_LIT) | (1 << MPParser.STRING_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Primitive_typesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primitive_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive_types" ):
                return visitor.visitPrimitive_types(self)
            else:
                return visitor.visitChildren(self)




    def primitive_types(self):

        localctx = MPParser.Primitive_typesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_primitive_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_dec(self):
            return self.getTypedRuleContext(MPParser.Array_decContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compound_type
